fix button alignment

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -7,6 +7,5 @@
 }
 
 button {
-  margin-top: 10px;
   width: 200px;
 }
